samples/_failures_safe/1761601422_d9c74b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de6904e1.c: In function ‘main’:
./samples/SAFE/__tmp_de6904e1.c:155:17: error: expected declaration or statement at end of input
  155 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_de6904e1.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de6904e1.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de6904e1.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de6904e1.c:155:17: error: expected declaration or statement at end of input
